# ru-finance-mcp

./: .gitignore  AGENTS.md  README.md  news.md  pyproject.toml
docs/: TOOLS.md
ru_finance/: __init__.py  bonds.py  cbr.py  mcp_server.py  moex.py  portfolio.py  rate.py  session.py
