[project]
name = "ru-finance"
version = "0.1.0"
description = "Доменный слой и MCP-сервер для анализа портфеля (MOEX + ЦБ РФ)"
requires-python = ">=3.11"
dependencies = [
    "moex>=2.0.0",
    "cbrapi>=0.1.7",
    "mcp>=1.0",
    "pandas>=2.0",
    "requests",
    "niquests",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ru_finance"]
